fixes: home btn (pagetrBulle not centered, hitbox)

--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ html.is-rendering .transition-vh {
 }
 
 .navlink#accueil {
+    display: block;
     letter-spacing: 1px;
     text-decoration: none;
     color: var(--accenttxt);
